--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -76,6 +76,10 @@ jobs:
           - name: GTest 1.8
             os: ubuntu-20.04
             target: check_gtest18
+          - name: Disable long long
+            os: ubuntu-latest
+            configure_args: --disable-longlong
+            target: tdd
     runs-on: ${{ matrix.os }}
     name: Automake ${{ matrix.name }}
     steps:
@@ -95,7 +99,7 @@ jobs:
       - name: Configure
         run: |
           autoreconf -i .
-          ./configure
+          ./configure ${{ matrix.configure_args }}
       - name: Build and test
         run: make ${{ matrix.target }}
 
@@ -342,18 +346,6 @@ jobs:
         env:
           TERM: linux
         run: $CPPUTEST_HOME/platforms/Dos/alltests.sh
-
-  automake-no-long-long:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-      - name: Configure
-        run: |
-          autoreconf -i .
-          ./configure --disable-longlong
-      - name: Build and test
-        run: make tdd
 
   cmake_msys:
     runs-on: windows-latest
