--- a/platforms/Dos/Makefile
+++ b/platforms/Dos/Makefile
@@ -9,23 +9,34 @@ comma := ,
 path_separator := /
 drive = $(subst $(CYGDRIVE),$(lastword $(subst /, ,$(CYGDRIVE))):/,$(1))
 convert_paths = $(if $(CYGDRIVE),$(subst /,$(path_separator),$(call drive,$(1))),$(1))
+CPPUTEST_HOME ?= .
 
 -include $(CPPUTEST_HOME)/platforms/Dos/platform.mk
 include $(CPPUTEST_HOME)/platforms/Dos/sources.mk
 
-# Disable W013 unreachable code - it overreacts to CHECK_EQUAL macros
-# Disable W367 conditional expression in if statement is always true - same
-# Disable W368 conditional expression in if statement is always false - same
-# Disable W391 assignment found in boolean expression - we don't care
-
-CFLAGS := \
-  -q -c -os -oc -d0 -we -w=3 -wcd=13 -wcd=367 -wcd=368 -wcd391 -wcd=472 -ml -zm \
+COMMONFLAGS := \
+  -q -c -os -oc -d0 -we -w=3 -ml -zm \
   -dCPPUTEST_MEM_LEAK_DETECTION_DISABLED=1 -dCPPUTEST_STD_CPP_LIB_DISABLED=1 \
   -i$(call convert_paths,$(CPPUTEST_HOME)/include) \
   -i$(call convert_paths,$(CPPUTEST_HOME)/include/Platforms/Dos) \
   -i$(call convert_paths,$(WATCOM)/h) -i$(call convert_paths,$(WATCOM)/h/nt) \
 
-CXXFLAGS := $(CFLAGS) -xds
+# Disable W303 unreferenced parameter - PUNUSED is GNU-specific
+CFLAGS := \
+  $(COMMONFLAGS) \
+  -wcd=303
+
+# Disable W013 unreachable code - it overreacts to CHECK_EQUAL macros
+# Disable W367 conditional expression in if statement is always true - same
+# Disable W368 conditional expression in if statement is always false - same
+# Disable W391 assignment found in boolean expression - we don't care
+CXXFLAGS := \
+  $(COMMONFLAGS) \
+  -wcd=13 \
+  -wcd=367 \
+  -wcd=368 \
+  -wcd=391 \
+  -xds
 
 .PHONY: all clean
 
@@ -36,7 +47,7 @@ all: CPPU.LIB CPPUX.LIB \
 clean:
 	rm -rf ../src/CppUTest/*.o ../src/CppUTestExt/*.o \
     ../src/Platforms/dos/*.o ../tests/*.o ../tests/CppUTestExt/*.o \
-    *.o *.map *.txt *.LOG *.EXE *.err *.LIB *.LST
+    *.o *.map *.LOG *.EXE *.err *.LIB *.LST
 
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -fo=$(call convert_paths,$@) $(call convert_paths,$<)
