--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -488,3 +488,20 @@ jobs:
           ./configure
       - name: Build and test
         run: make tdd
+
+  Docker:
+    strategy:
+      matrix:
+        image: [ "ubuntu", "dos"]
+    runs-on: ubuntu-latest
+    name: Docker ${{ matrix.image }}
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build
+        uses: docker/build-push-action@v3
+        with:
+          file: docker/Dockerfile.${{ matrix.image }}
+          tags: cpputest/${{ matrix.image }}
