Restore ported travis configs
As requested.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,17 +25,116 @@ jobs:
 
 # Basic builds
 
+# Mac OSX
+    - stage: basic build & test
+      compiler: gcc
+      os: osx
+      env: BUILD=autotools
+    - compiler: clang
+      env: BUILD=autotools
+      os: osx
+
+# Windows
+    - compiler: msbuild
+      os: windows
+      env: BUILD=vc_windows CPP_STD=17
+        - MSBUILD_PATH="c:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\MSBuild\15.0\Bin"
+        - VCTargetsPath="C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\Common7\IDE\VC\VCTargets"
+
+# Linux
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=17
+    - compiler: gcc
+      env: BUILD=autotools
+    - compiler: clang
+      env: BUILD=autotools
+
 # Extended builds, different C++ version and build tools
     - stage: extended build & test
 
+# Mac OSX
+      compiler: clang
+      os: osx
+      env: BUILD=cmake CPP_STD=17
+    - compiler: gcc
+      os: osx
+      env: BUILD=cmake CPP_STD=14
+
+# Linux
+#   CMake different C++ versions with clang
+    - compiler: clang
+      env: BUILD=cmake CPP_STD=98
+    - compiler: clang
+      env: BUILD=cmake CPP_STD=11
+    - compiler: clang
+      env: BUILD=cmake CPP_STD=14
+    - compiler: clang
+      env: BUILD=cmake CPP_STD=17
+
+#   CMake different C++ versions with gcc
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=98
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=11
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=14
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=17
+
+#   New compilers can be added here. Need to be cleared when compiler becomes standard
+    - compiler: gcc
+      env: BUILD=cmake CPP_STD=17
+        - CC=gcc-10
+        - CXX=g++-10
+      addons:
+        apt:
+          packages: ['g++-10']
+          sources:
+            - sourceline: 'ppa:ubuntu-toolchain-r/test'
+    - compiler: clang
+      env: BUILD=cmake CPP_STD=17
+        - CC=clang-11
+        - CXX=clang++-11
+      addons:
+        apt:
+          sources:
+            - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-11 main'
+              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
+          packages: ['clang-11', 'libc++-11-dev', 'libc++abi-11-dev']
+
 #   Specific other tests
     - compiler: gcc
+      env: BUILD=test_report
+      addons:
+        apt:
+          packages:
+          - ant-optional
+    - compiler: gcc
+      env: BUILD=cmake_coverage
+    - compiler: gcc
+      env: BUILD=cmake_gtest
+    - compiler: clang
+      env: BUILD=autotools_gtest
+    - compiler: gcc
       env: BUILD=autotools_cmake_install_test
+
+#   MS DOS Build
+    - env: BUILD=make_dos
+      addons:
+        apt:
+          packages:
+          - dosbox
 
 #   Docker images. Need to be cleared at times
     - env: BUILD=docker_ubuntu_autotools
     - env: BUILD=docker_ubuntu_dos
+    - env: BUILD=autotools_dist
 
+    - stage: extensive daily tests
+      compiler: gcc
+      env: BUILD=extensive_check
+    - compiler: clang
+      env: BUILD=extensive_check
     - arch: ppc64le
       compiler: gcc
       env: BUILD=autotools
@@ -45,6 +144,8 @@ jobs:
     - arch: arm64
       compiler: gcc
       env: BUILD=autotools
+    - compiler: gcc
+      env: BUILD=makefileworker
     - compiler: clang
       env: BUILD=autotools_install_and_test_examples
 
@@ -79,6 +180,12 @@ before_script:
 
 script:
 - "../scripts/travis_ci_build.sh"
+
+after_failure:
+- "../scripts/travis_ci_after.sh"
+
+after_success:
+- "../scripts/travis_ci_after.sh"
 
 notifications:
   slack:
