--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -492,7 +492,7 @@ jobs:
   Docker:
     strategy:
       matrix:
-        image: [ "ubuntu", "dos"]
+        image: ["ubuntu", "dos"]
     runs-on: ubuntu-latest
     name: Docker ${{ matrix.image }}
     steps:
@@ -500,6 +500,14 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        env:
+          TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        if: ${{ env.TOKEN != '' }}
       - name: Build
         uses: docker/build-push-action@v3
         with:
