--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -12,6 +12,8 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       # https://github.com/actions/download-artifact/issues/3
       - name: Download artifact
         id: download-artifact
@@ -21,5 +23,15 @@ jobs:
           name: Distribution
           workflow_conclusion: success
           branch: master
-      # TODO: let's just validate that this is triggered as expected first
-      - run: ls -R
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: latest-passing-build
+          name: Latest passing build
+          body: |
+            This is the automatic release from GitHub Actions.
+            Whenever a build passes, it gets released as Latest Passing Build.
+          files: |
+            cpputest-latest.tar.gz
+            cpputest-latest.zip
+          fail_on_unmatched_files: true
