--- a/.github/workflows/deploy-latest.yml
+++ b/.github/workflows/deploy-latest.yml
@@ -12,6 +12,8 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       # https://github.com/actions/download-artifact/issues/3
       - name: Download artifact
         id: download-artifact
@@ -21,5 +23,8 @@ jobs:
           name: Distribution
           workflow_conclusion: success
           branch: master
-      # TODO: let's just validate that this is triggered as expected first
-      - run: ls -R
+      - name: Tag
+        uses: anothrNick/github-tag-action@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CUSTOM_TAG: latest-passing-build
