--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -265,7 +265,9 @@ jobs:
       ### SETUP
 
       - name: Install packages
-        run: sudo apt install -y ${{ matrix.apt_packages }}
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ${{ matrix.apt_packages }}
         if: ${{ matrix.apt_packages }}
 
       - uses: carlosperate/arm-none-eabi-gcc-action@v1
@@ -404,6 +406,7 @@ jobs:
         uses: actions/checkout@main
       - name: Install tools
         run: |
+          sudo apt-get update
           sudo apt-get install -y dosbox
           git clone https://github.com/cpputest/watcom-compiler.git $WATCOM
           echo "$WATCOM/binl" >> $GITHUB_PATH
