--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -204,21 +204,23 @@ jobs:
             os: macos-latest
             preset: defaults
             install: true
+            # Undefined-behavior in leak detection breaks #include<list> on Mac
+            cmake_args: -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED=YES
           - name: Apple Clang 14
             os: macos-latest
-            cmake_args: -DCMAKE_CXX_STANDARD=14
+            cmake_args: -DCMAKE_CXX_STANDARD=14 -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED=YES
             preset: Clang
           - name: Apple Clang 17
             os: macos-latest
-            cmake_args: -DCMAKE_CXX_STANDARD=17
+            cmake_args: -DCMAKE_CXX_STANDARD=17 -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED=YES
             preset: Clang
           - name: Apple Clang 20
             os: macos-latest
-            cmake_args: -DCMAKE_CXX_STANDARD=20
+            cmake_args: -DCMAKE_CXX_STANDARD=20 -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED=YES
             preset: Clang
           - name: Mac GNU 14
             os: macos-latest
-            cmake_args: -DCMAKE_CXX_STANDARD=14
+            cmake_args: -DCMAKE_CXX_STANDARD=14 -DCPPUTEST_MEM_LEAK_DETECTION_DISABLED=YES
             preset: GNU
           - name: OpenWatcom DOS
             os: ubuntu-latest
