Fix IAR force includes
A space is not parsed as intended. Use and `=` instead.

--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -101,7 +101,7 @@ if(NOT CPPUTEST_MEM_LEAK_DETECTION_DISABLED)
     if(MSVC)
         set(force_include "/FI")
     elseif(CMAKE_CXX_COMPILER_ID STREQUAL "IAR")
-        set(force_include "--preinclude ")
+        set(force_include "--preinclude=")
     else()
         set(force_include "-include")
     endif()
