--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(CppUTest
         ${PROJECT_SOURCE_DIR}/include/CppUTest/TestFilter.h
         ${PROJECT_SOURCE_DIR}/include/CppUTest/TestTestingFixture.h
         ${PROJECT_SOURCE_DIR}/include/CppUTest/MemoryLeakDetectorNewMacros.h
+        ${PROJECT_SOURCE_DIR}/include/CppUTest/MemoryLeakDetectorForceInclude.h
         ${PROJECT_SOURCE_DIR}/include/CppUTest/TestHarness.h
         ${PROJECT_SOURCE_DIR}/include/CppUTest/Utest.h
         ${PROJECT_SOURCE_DIR}/include/CppUTest/MemoryLeakWarningPlugin.h
@@ -101,14 +102,13 @@ if(NOT CPPUTEST_MEM_LEAK_DETECTION_DISABLED)
     if(MSVC)
         set(force_include "/FI")
     elseif(CMAKE_CXX_COMPILER_ID STREQUAL "IAR")
-        set(force_include "--preinclude ")
+        set(force_include "--preinclude=")
     else()
         set(force_include "-include")
     endif()
     target_compile_options(CppUTest
         PUBLIC
-            "$<$<COMPILE_LANGUAGE:C,CXX>:${force_include}CppUTest/MemoryLeakDetectorMallocMacros.h>"
-            "$<$<COMPILE_LANGUAGE:CXX>:${force_include}CppUTest/MemoryLeakDetectorNewMacros.h>"
+            ${force_include}CppUTest/MemoryLeakDetectorForceInclude.h
     )
 endif()
 
