--- a/CppUTest.vcxproj
+++ b/CppUTest.vcxproj
@@ -271,6 +271,7 @@
     <ClInclude Include="include\cpputest\platformspecificfunctions_c.h" />
     <ClInclude Include="include\CppUTest\TeamCityTestOutput.h" />
     <ClInclude Include="include\CppUTest\MemoryLeakDetector.h" />
+    <ClInclude Include="include\CppUTest\MemoryLeakDetectorForceInclude.h" />
     <ClInclude Include="include\CppUTest\MemoryLeakDetectorMallocMacros.h" />
     <ClInclude Include="include\CppUTest\MemoryLeakDetectorNewMacros.h" />
     <ClInclude Include="include\CppUTest\MemoryLeakWarningPlugin.h" />
