Update dead Ubuntus

--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -18,10 +18,7 @@ jobs:
           source: examples
 
   codeql:
-    runs-on: ubuntu-20.04
-    env:
-      CC: gcc-10
-      CXX: g++-10
+    runs-on: ubuntu-latest
     name: "CodeQL"
     steps:
       - name: Checkout
@@ -160,20 +157,6 @@ jobs:
             os: ubuntu-latest
             cmake_args: -DCMAKE_CXX_STANDARD=20
             preset: GNU
-          - name: GCC-10
-            os: ubuntu-20.04
-            cmake_args: >
-              -DCMAKE_C_COMPILER=gcc-10
-              -DCMAKE_CXX_COMPILER=g++-10
-              -DCMAKE_CXX_STANDARD=17
-            preset: GNU
-          - name: Clang-11
-            os: ubuntu-20.04
-            cmake_args: >
-              -DCMAKE_C_COMPILER=clang-11
-              -DCMAKE_CXX_COMPILER=clang++-11
-              -DCMAKE_CXX_STANDARD=17
-            preset: Clang
           - name: MinGW
             os: ubuntu-latest
             preset: MinGW
