Delete vetigial c2000 header

--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -56,12 +56,7 @@ if(CPPUTEST_PLATFORM)
     )
 endif()
 
-if(CPPUTEST_PLATFORM STREQUAL "c2000")
-    target_include_directories(CppUTest
-        PUBLIC
-            $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/../../include/Platforms/c2000>
-    )
-elseif(CPPUTEST_PLATFORM STREQUAL "Iar")
+if(CPPUTEST_PLATFORM STREQUAL "Iar")
     target_compile_options(CppUTest
         PRIVATE
             --dlib_config full
